# geomorph

./: .gitignore  AFAIRE  AFAIRE.md  AUTHORS  CMakeLists.txt  ChangeLog  FAQ  FAQ-fr  GeoMorph.xpm  LISEZMOI.md  Makefile.am  NEWS  NEWS.md  README.md  TODO  TODO.md  clean-for-vcs.sh  config.h.cmake  configure.ac  geomorph.desktop  geomorph.desktop.cmake  geomorphrc_de  geomorphrc_en  geomorphrc_fr  globals.h.cmake  install-step1-dir  install-step1-dir.cmake  install-step2-rcfile  install-step2-rcfile.cmake  install-step3-menu  install-step3-menu.cmake  install-step4-desktop  install-step4-desktop.cmake  install-user  install-user.cmake  update-rc  update-rc.cmake  v0_30_new_sections.cmake  version.cmake
cmake/: FindGTKGLext.cmake
doc/: CMakeLists.txt  de.po  development_en.html  development_fr.html  doc_index_en.html  doc_index_fr.html  faq_en.html  faq_fr.html  frame_en.html  frame_fr.html  geomorph_fr.html  index.html  installing_en.html  installing_fr.html  intro_en.html  intro_fr.html  libpng.pc  licences_en.html  licences_fr.html  main_header.css  menu_en.html  menu_fr.html  navigation_en.html  navigation_fr.html  news_en.html  news_fr.html  older_news_2003_2006_en.html  older_news_2003_2006_fr.html  site_map_en.html  site_map_fr.html  support-en.html  support-fr.html  test.html  title.html
doc/crack_network/: cracknet_bumptest.pov  cracknet_scenes.tgz
doc/crack_network/en/: The Crack Network Tool.html  Using Geomorph height fields as normal maps.html
doc/crack_network/fr/: The Crack Network Tool.html  Using Geomorph height fields as normal maps.html
doc/fourier/en/: egg_box_tutorial.html  fourier_explorer_basics.html
doc/fourier/fr/: egg_box_tutorial.html  fourier_explorer_basics.html
doc/getting_started/: getting_started_en.html  getting_started_fr.html
doc/licences/: CC license - en.html  Creative Commons Deed - en.html  Creative Commons Deed - fr.html  GPL-fr.html  GPL.html  disclaimer-popup-en.html  disclaimer-popup-fr.html  legalcode-en.html  legalcode-fr.html
doc/options/en/: options_dialog.html
doc/options/fr/: options_dialog.html
doc/povray/en/: Anatomy of a Povray file.html  Geomorph - Predefined Povray Scripts.html  Geomorph and Povray - How to deal with the skyline.html  Process.html  Texturing a Geomorph height field with Povray.html
doc/povray/fr/: Anatomie - fichier Povray.html  Geomorph - Les scripts Povray predefinis.html  Geomorph et Povray - le defi de la ligne d_horizon.html  Processus.html  Texturer un relief Geomorph avec Povray.html
doc/povray/scenes/: colmap  desert.pov  geomorph_txtr.inc  mountains.pov  painted_desert_map1.inc  sea_and_rocks.pov  slope_patterns.inc  test_terrain_texture.pov
doc/preview/en/: The_Preview_Dialog.html
doc/preview/fr/: Le_dialogue_d_apercu.html
doc/tools/en/: tools_index.html
doc/tools/fr/: index_outils.html
doc/tut_cracks/: geomorph_txtr.inc  sea_and_rocks.pov
doc/tut_cracks/en/: The_Cracks_Tutorial.html
doc/tut_cracks/fr/: Tutoriel_Crevasses.html
doc/tut_desert/: desert.pov
doc/tut_desert/en/: The_Desert_Tutorial.html
doc/tut_desert/fr/: Tutoriel_desert.html
doc/tut_fault/en/: The_Fault_Tutorial.html
doc/tut_fault/fr/: Tutoriel_Failles.html
doc/tut_moon/en/: The_Sea_And_Moon_Tutorial.html
doc/tut_moon/fr/: Tutoriel_mer_et_lune.html
doc/tut_water_maps/: giant_causeway.pov  mountains_with_water.pov
doc/tut_water_maps/en/: Rivers on an eroded terrain with Geomorph.html  Terraces_Tutorial.html  Tutorial_Giant_Causeway.html  Using_water_maps.html
doc/tut_water_maps/fr/: Rivers on an eroded terrain with Geomorph.html  Terraces_Tutorial.html  Tutorial_Giant_Causeway.html  Using_water_maps.html
po/: CMakeLists.txt  ChangeLog  LINGUAS  Makevars  de.po  en.po  fr.po  geomorph.pot
scenes/: CMakeLists.txt  Makefile.am  canyon.pov  cracknet.pov  cracknet_nobump.pov  desert.pov  desert_new.pov  geomorph.inc  giant_causeway.pov  global_settings.inc  iced_satellite.pov  moon.pov  mountains.pov  mountains_test.pov  mountains_with_water.pov  painted_desert.pov  painted_desert_map2.inc  painted_desert_map3.inc  sea_and_fog.pov  sea_and_rocks.pov  sea_n_moon.pov  simple_terrain.pov  stars.inc  sunseta.pov  sunsetb.pov  terraces.pov  uranus.inc
src/: CMakeLists.txt  Makefile.am
src/app/: CMakeLists.txt  Makefile.am  app.c  app.h  doc.h  doctype.c  document.c  globals.h  main.c  main.h  stack.c  stack.h  thisappinit.c  thisappinit.h
src/colmap/: CMakeLists.txt  Makefile.am  colmap.c
src/fourier/: CMakeLists.txt  Makefile.am  fft.c  fft.h  fourier.c  fourier.h  fourier_dialog.c  fourier_dialog.h
src/hf/: CMakeLists.txt  Makefile.am  camera.c  camera.h  craters.c  craters.h  dialog_utilities.c  dialog_utilities.h  draw.c  draw.h  draw_crater_dialog.c  draw_crater_dialog.h  draw_dialog.c  draw_dialog.h  draw_hf.c  draw_hf.h  draw_hf_dialog.c  draw_hf_dialog.h  draw_tools_dialog.c  draw_tools_dialog.h  erode.c  erode.h  erode_dialog.c  erode_dialog.h  fault.c  fault.h  fault_dialog.c  fault_dialog.h  fill.c  fill.h  fill_dialog.c  fill_dialog.h  geom_transform_dialog.c  geom_transform_dialog.h  gl_preview.c  gl_preview.h  globals.h  hf.c  hf.h  hf_calc.c  (+60 more)
src/icons/: F.xpm  GeoMorph_16x16.xpm  GeoMorph_32x32.xpm  GeoMorph_48x48.xpm  about.xpm  afraid_3d.xpm  arrow_small.xpm  attention.xpm  black.xpm  blank.xpm  blend.xpm  bombe.xpm  brightness.xpm  brightness_contrast.xpm  bucketfill.xpm  circle_select.xpm  circular_project.xpm  circular_w.xpm  city.xpm  close.xpm  concave_w.xpm  contrast.xpm  crackpen.xpm  craters.xpm  create.xpm  crests.xpm  delete.xpm  depth.xpm  dig.xpm  dilate.xpm  discard.xpm  discard_red.xpm  downarrow.xpm  downarrow_bck.xpm  dunes.xpm  east.xpm  eraser.xpm  erode.xpm  eroded_ribs.xpm  evase.xpm  (+122 more)
src/utils/: CMakeLists.txt  Makefile.am  config_dialog.c  config_dialog.h  config_rc_file.c  config_rc_file.h  filesel.c  filesel.h  menus_n_tools.c  menus_n_tools.h  readpng.c  scale_buttons.c  scale_buttons.h  utils.c  utils.h  writepng.c  x_alloc.c  x_alloc.h
